[gd_scene load_steps=2 format=2]

[ext_resource path="res://Entities/Liquids/LiquidHandler.gd" type="Script" id=1]

[node name="LiquidHandler" type="Node2D"]
script = ExtResource( 1 )

[node name="StartTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true
autostart = true

[node name="LiquidMovement" type="Timer" parent="."]
wait_time = 0.05
autostart = true
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="timeout" from="LiquidMovement" to="." method="_on_LiquidMovement_timeout"]
